Bug 845676 - Initialize mPausedForPlaybackRateNull in MediaDecoder constructor to prevent an assertion. r=kinetik